volume slider appearance fix on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ body {
 /* Chrome */
 input[type=range] {
     -webkit-appearance: none;
+    background: transparent;
     width: 100%;
 }
 
